testdata/invalid/range_invalid_01.lisp
;;error:4:1-15:malformed declaration
(defcolumns (X :i16) (Y :i16))

(definrange X)
